export const snapshot = {};

snapshot[`code_hightlight plugin 1`] = `2`;

snapshot[`code_hightlight plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`code_hightlight plugin 3`] = `
{
  content: "backend:\\n  name: git-gateway\\n  branch: master\\nmedia_folder: img\\npublic_folder: /img\\nsite_url: 'https://example.com/'\\nlocal_backend: false\\n",
  data: {
    content: "backend:\\n  name: git-gateway\\n  branch: master\\nmedia_folder: img\\npublic_folder: /img\\nsite_url: 'https://example.com/'\\nlocal_backend: false\\n",
    tags: [
    ],
    url: "/admin/config.yml",
  },
  dest: {
    ext: ".yml",
    path: "/admin/config",
  },
  src: {
    ext: undefined,
    path: "",
  },
}
`;

snapshot[`code_hightlight plugin 4`] = `
{
  content: '\\n        <!DOCTYPE html>\\n        <html lang="en">\\n        <head>\\n          <meta charset="UTF-8">\\n          <meta name="viewport" content="width=device-width, initial-scale=1.0">\\n          <title>Admin</title>\\n        </head>\\n        <body>\\n        <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url"><script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>\\n        </body>\\n        </html>\\n        ',
  data: {
    content: '\\n        <!DOCTYPE html>\\n        <html lang="en">\\n        <head>\\n          <meta charset="UTF-8">\\n          <meta name="viewport" content="width=device-width, initial-scale=1.0">\\n          <title>Admin</title>\\n        </head>\\n        <body>\\n        <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url"><script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>\\n        </body>\\n        </html>\\n        ',
    tags: [
    ],
    url: "/admin/",
  },
  dest: {
    ext: ".html",
    path: "/admin/index",
  },
  src: {
    ext: undefined,
    path: "",
  },
}
`;
